[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { version = "0.13.1", features = ["chrono"] }
futures = "0.3.31"
log = "0.4.25"
skystreamer = "0.2.2"
tokio = {version = "1.43.0", features = ["full"]}
chrono = "0.4.39"
serde_with = "3.12.0"
atrium-api = "0.24.10"
